# fyp

./: .env  .gitignore  app.json  docker-compose.yaml  metro.config.js  package-lock.json  package.json  tailwind.config.js  update_backend_url.py  update_expo_credentials.py
android/: settings.gradle
api/: api.ts
app/: _layout.tsx  bioinput.tsx  gamification.tsx  mood.tsx  moodtracking.tsx  read.tsx  settings.tsx  signin.tsx  signup.tsx  understand.tsx  user-details.tsx
backend/: Dockerfile  README.md  commands.py  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  schemas.py
backend/app/: .env  alembic.ini  commands.py  database.py  main.py  models.py  schemas.py  script.py  session.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 03b22e21617f_add_occupation.py  0cb61cd86774_realign_database.py  221e6bf8672c_realign_baseline.py  2d34f8e053c0_add_dob_and_sex.py  5f969d1643b2_add_therapist_data.py  5fb9083bb7a6_add_chat.py  7564f01e0b55_initial_revision.py  9979a30895a4_depression_risk_log.py  9a8fe4bb9b95_change_guided_journal_body_type.py  9dd69f8ce332_therapist_user_id.py  bffd47c6cee0_add_fields_in_mood_entry.py  d0a4a18e401a_therapist_note_and_user_image.py  e4ed14eff776_add_streak.py
backend/tests/black_box/: test_main.py
backend/tests/integration/: test_integration.py
backend/tests/white_box/: test_commands.py  test_main.py
components/: Back.tsx  Card.tsx  CustomText.tsx  GroupedProgressBar.tsx  ProgressBar.tsx  SignInWith.tsx  TopNav.tsx
constants/: Colors.ts  globals.ts  styles.ts
frontend/: .gitignore  (+3 more)
(+224 files in other folders)
