[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MCS01 <ykog0003@student.monash.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
requests = "^2.32.3"
python-multipart = "^0.0.12"
pillow = "^10.4.0"
aiohttp = "^3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
